--- a/sql-edu/pom.xml
+++ b/sql-edu/pom.xml
@@ -38,6 +38,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--DataFaker -->
+        <dependency>
+            <groupId>net.datafaker</groupId>
+            <artifactId>datafaker</artifactId>
+            <version>2.2.2</version>
+        </dependency>
 
     </dependencies>
 
